--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>ConvertIMG</title>
 </head>
 
@@ -20,7 +20,7 @@
         </div>
         <div class="flex f-center f-vcenter">
           <div id="start-type"></div>
-          <img id="right-arrow" src="/img/arrow.svg" alt="right arrow">
+          <img id="right-arrow" src="./img/arrow.svg" alt="right arrow">
           <select id="image-type">
             <option value="png" selected="selected">png</option>
             <option value="jpg">jpg</option>
@@ -40,20 +40,20 @@
     <section class="flex f-spacebetween m-bottom">
       <div class="m-review m-upload flex f-center f-vcenter">
         <input type="file" id="upload" class="disable">
-        <img id="img-upload" src="/img/server.svg" alt="upload">
+        <img id="img-upload" src="./img/server.svg" alt="upload">
         <button id="btn-upload">Upload</button>
         <div id="upload-image" class="review disable"></div>
       </div>
       <div class="m-review m-output">
         <a href="#" id="download" class="disable"></a>
         <div id="download-image" class="review disable"></div>
-        <button class="disable" id="btn-download"><img class="img-download" src="/img/download.svg" alt="download"></button>
+        <button class="disable" id="btn-download"><img class="img-download" src="./img/download.svg" alt="download"></button>
       </div>
     </section>
   </main>
 
-  <script src="/lib/jquery.min.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="./lib/jquery.min.js"></script>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
