Fix lossless type png, bmp can not change quality

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img class="right-arrow" src="./img/arrow.svg" alt="right arrow">
 
         <label for="">Quality: </label>
-        <select id="image-quality">
+        <select id="image-quality" disabled="disabled">
           <option value="10" selected="selected">10</option>
           <option value="9">9</option>
           <option value="8">8</option>
