✨ Add drag and drop file
_ Add event dragenter to highlight border
_ Add event dragover to hightlight border
_ Add event dragleave to stop hightlight border
_ Add event drop to upload and read file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="flex f-center f-vcenter">
   <div class="panel-upload flex f-center f-vcenter" id="panel-upload">
-    <div class="m-upload flex f-center f-vcenter">
+    <div class="m-upload flex f-center f-vcenter" id="upload-box">
       <input type="file" id="upload" class="disable">
       <img id="img-upload" src="./img/server.svg" alt="upload">
       <button id="btn-upload">Upload</button>
