✨ Add button to re-upload new file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button class="btn-top disable" id="zoom-in">
         <img class="btn-icon" src="./img/search.svg" alt="zoom in">
       </button>
-      <button class="btn-top">
+      <button class="btn-top" id="upload-more">
         <img class="btn-icon" src="./img/server.svg" alt="upload">
       </button>
       <button class="btn-top" id="change-preview">
