--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
       <div class="flex f-right f-vcenter">
         <div id="output-size">0B</div>
         <button id="convert">Convert</button>
+        <button class="btn-top" id="remove-file">
+          <img class="btn-icon" src="./img/bin.svg" alt="remove file">
+        </button>
       </div>
     </section>
     <section class="flex f-spacebetween m-bottom disable" id="compare-separate">
