✨ Add progress bar to show finish covert

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         </select>
 
       </div>
+      <div class="flex f-center f-vcenter">
+        <progress id="progress-bar" max="100" value="0"></progress>
+        <span id="progress-value">0%</span>
+      </div>
       <div class="flex f-right f-vcenter">
         <div id="output-size">0B</div>
         <button id="convert">Convert</button>
