💄 Prepare for new UI

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="flex f-spacebetween f-vcenter m-top">
 
       <section class="flex f-left f-vcenter">
-        <!-- Zoom-in -->
+        <!-- Blur -->
         <div class="tooltip">
           <button class="btn-top btn-left" id="blur">
             Blur
@@ -34,7 +34,7 @@
           </div>
         </div>
 
-        <!-- Upload file -->
+        <!-- Grayscale -->
         <div class="tooltip">
           <button class="btn-top" id="grayscale">
             Grayscale
